# bblm

./: .gitignore  .pre-commit-config.yaml  README.md  environment.yml  pyproject.toml
.github/workflows/: ci.yml
bblm/: finetune.py  pretrain.py
bblm/tasks/finetuning/web_of_science/: auto.py  wos.py
bblm/tasks/pretraining/: pretraining.py
data/: README.md
report/: README.md  acl2023.bbl  acl2023.tex  ref.bib
src/bblm/: auto.py  dataset.py  download_data.py  electra_tiny_elc.py  finetune.py  pretrain.py  pretraining.py  utils.py  web_of_science.py
src/bblm/cli/: download_data.py  finetune.py
src/bblm/models/: electra_tiny_elc.py
src/bblm/my_auto_text_classifier/: modeling.py
src/bblm/tasks/finetuning/web_of_science/: auto.py  wos.py
src/bblm/tasks/pretraining/: dataset.py  pretraining.py
src/bblm/utils/: device.py  log.py
tests/: pretraining.py  test_download_data.py  test_helper.py  test_my_auto_text_classifer.py  test_pretraining.py  test_scripts.py  test_wos.py  web_of_science.py
training/: download_data.py  finetune.py  pretrain.py  pretrain_electra_elc.py
utils/: device.py
