[project]
name = "bblm"
version = "0.1.0"
requires-python = "~=3.10"

[project.optional-dependencies]
dev = [
    "pytest==8.3.4",
    "pytest-benchmark==5.1.0",
    "pytest-html",
    "ruff==0.11.10",
    "mypy==1.15.0",
    "jedi-language-server==0.45.1",
    "pre-commit",
    "bandit[toml]",
]

[tool.mypy]
python_version = "3.10"
disallow_untyped_defs = true
ignore_missing_imports = true
exclude = [ # Note that this only excludes discovery when using mypy from cli
    "tests",
]

[tool.pytest.ini_options]
markers = [
    "integration: mark test as integration tests (slow, may require network or assumes data is present in project).",
]
testpaths = [
    "tests",
]
python_files = "test_*.py"
tmp_path_retention_policy = "none"

[tool.ruff]
line-length = 80
target-version = "py310"

[tool.ruff.lint]
select = [
    "E4",
    "E7",
    "E9",
    "F",
    "D",
    "I",
]
# The following would not play nice with code I reused for electra_tiny_elc.py
ignore = [
    "D101",
    "D102",
    "D202",
    "D205",
    "D400",
    "D401",
    "D414",
]


[tool.ruff.lint.per-file-ignores]
"tests/*" = [
    "D",
]
"__init__.py" = ["D104"]

[tool.ruff.lint.pydocstyle]
convention = "numpy"

[tool.bandit]
skips = ["B615"] # This is noted in the readme
exclude_dirs = ["tests", "report"]
